<resources>
    <string name="app_name">DrawSome</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth_connection">Drawsome</string>
    <string name="title_activity_drawing">DrawingActivity</string>
    <string name="title_activity_view_drawing">ViewDrawingActivity</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_difficulty_second_user">DifficultySecondUserActivity</string>
    <string name="wait_message"> Please wait till your friend chooses the word!!</string>
    <string name="turn_to_guess_message"> Your Buddy Guessed your drawing!!
        It\'s your turn to guess now!</string>
    <string name="turn_to_draw_message"> It\'s your turn to draw now! </string>
    <string name="title_activity_turn_to_guess">TurnToGuessActivity</string>
    <string name="time_up"> Good try..Your time is up! </string>
    <string name="give_up"> Good try! </string>
    <string name="buddy_give_up"> Good try! Your buddy gave up... </string>
    <string name="connection_progress">Please wait. This should take only few seconds.</string>
    <string name="init_instructions"> One player should click "Initiate" , and other should press "Join" after</string>

</resources>
