<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="horizontal"
	android:background="#ffffff">

	<ImageButton
		android:id="@+id/small_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/button"
		android:layout_weight="1"
		android:background="#ffffff"
		android:contentDescription="@string/sml"
		android:src="@drawable/small" />

	<ImageButton
		android:id="@+id/medium_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/button"
		android:layout_weight="1"
		android:background="#ffffff"
		android:contentDescription="@string/med"
		android:src="@drawable/medium" />

	<ImageButton
		android:id="@+id/large_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/button"
		android:layout_weight="1"
		android:background="#ffffff"
		android:contentDescription="@string/lrg"
		android:src="@drawable/large" />

	<ImageButton
		android:id="@+id/xl_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/button"
		android:layout_weight="1"
		android:background="#ffffff"
		android:contentDescription="@string/med"
		android:src="@drawable/xl" />

	<ImageButton
		android:id="@+id/xxl_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/button"
		android:layout_weight="1"
		android:background="#ffffff"
		android:contentDescription="@string/lrg"
		android:src="@drawable/xxl" />

</LinearLayout>